--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = r'C:\\Users\\B.N.Singh\\Documents\\GitHub\\Group-4-NYC-Crimes\\NYPD_Shooting_Incident_Data__Historic_.csv'\n",
+    "file_path = r'C:\\Users\\B.N.Singh\\Documents\\GitHub\\Group-4-NYC-Crimes\\data\\NYPD_Shooting_Incident_Data__Historic_.csv'\n",
     "\n",
     "ds = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "[21626 rows x 26 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "<Axes: title={'center': 'Victims Sex'}, ylabel='count'>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "<Axes: title={'center': 'Perpetrators Sex'}, ylabel='count'>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
