updates to model card and ml models

--- a/model_card.ipynb
+++ b/model_card.ipynb
@@ -25,7 +25,7 @@
     "5. Evaluation Factors: Evaluation factors such as perpetrator and victim age and sex are being reported. This allows the community to know what the \"typical\" is for a perpetrator or a victim. \n",
     "\n",
     "**Metrics** \n",
-    "1. Performance Measures: There were no measures of model performance reported. \n",
+    "1. Performance Measures: Accuracy was measured for each model and it was close to 72%. This is a pretty good accuracy score for a basic predictive model. Other than that the other performance measures used were the confusion matrix and the classifications matrix. \n",
     "2. Decision Thresholds: Decision thresholders were not used. \n",
     "3. Classification: The classification systems for this is hard because the crime has to be reported and document. As the example in the text stated, it is not necessaRily a survelliance error. However, one classification system that could be seen is false negative rate. Several shootings occur and no one comes forward, seeks assistance, or dies and is not found. This could lead to numbers being off in the total amount of shootings that occur. \n",
     "\n",
@@ -38,10 +38,10 @@
     "Noted \"Same as Evaluation Data\" \n",
     "\n",
     "**Quantitative Analysis** \n",
-    "1. Overall, we think that the model performed well with respect to each fact and to the intersection of the evaluated factors. \n",
+    "1. Overall, we think that the model performed well with respect to each fact and to the intersection of the evaluated factors. The two models were able to achieve an accuracy of almost 72% and this is a very respectable score for something that we just learned to develop this semester. \n",
     "\n",
     "**Ethical Considerations** \n",
-    "1. Of course, the people who originally collected the data are human, as so is the one who created this dataset. That being said, there could be ethical dilemmas in which the way data was reported and if data was left out of reporting. It should also be important to consider that this dataset is not to be a case that will predict all shootings that may occur in the future. \n"
+    "1. Of course, the people who originally collected the data are human, as so is the one who created this dataset. That being said, there could be ethical dilemmas in which the way data was reported and if data was left out of reporting. It should also be important to consider that this dataset is not to be a case that will predict all shootings that may occur in the future. Another ethical dilemma that mayh arise with such a dataset is that personal data points such as victims race, sex, and age is used in the dataset but it is not clear whether each victim provided permission to use their data. The deceased are not alive to give permission so it is not clear whether the next of kin was asked before using their data.\n"
    ]
   }
  ],
