final final update

--- a/datasheet.ipynb
+++ b/datasheet.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "**Uses:**\n",
     "1. Original Intended Uses: The dataset was originally used by Segura to explore crime and policing habits. \n",
-    "2. How Should It Not Be Used: This dataset should not be used to depend on where crime might occur. Crime is various and being solely dependent on the model is not good practice for police officers. \n",
+    "2. How Should It Not Be Used: This dataset should not be used to depend on where crime might occur. Crime is various and being solely dependent on the model is not good practice for police officers. It should also not be used in a stereotypical or discriminatory manner\n",
     "\n",
     "**Distribution:**\n",
     "1. How Will It Be Distributed: The dataset will be distributed to Dr. Lindgren as part of the final assignment. \n",
