--- a/model_card.ipynb
+++ b/model_card.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "**Model Details**\n",
     "1. Citation/Contact Info: Thaddeus Segura, http://www.thaddeus-segura.com/\n",
-    "2. Purpose of the Model: Segura states that the purpose of the model is to \"dig into crime and policing habits\" \n",
+    "2. Purpose of the Model: Segura states that the purpose of the model is to \"dig into crime and policing habits.\" The information that Segura provides is very vague, so some of the questions we had difficulties answering. \n",
     "3. Statement About ML Technique(s): None \n",
     "\n",
     "**Intended Use**\n",
