--- a/model_card.ipynb
+++ b/model_card.ipynb
@@ -41,7 +41,11 @@
     "1. Overall, we think that the model performed fairly well with respect to each fact and to the intersection of the evaluated factors. The two models were able to achieve an accuracy of almost 72% and this is a very respectable score for something that we just learned to develop this semester. \n",
     "\n",
     "**Ethical Considerations** \n",
-    "1. Of course, the people who originally collected the data are human, as so is the one who created this dataset. That being said, there could be ethical dilemmas in which the way data was reported and if data was left out of reporting. It should also be important to consider that this dataset is not to be a case that will predict all shootings that may occur in the future. Another ethical dilemma that may arise with such a dataset is that personal data points such as victims race, sex, and age is used in the dataset but it is not clear whether each victim provided permission to use their data. The deceased are not alive to give permission so it is not clear whether the next of kin was asked before using their data.\n"
+    "1. Of course, the people who originally collected the data are human, as so is the one who created this dataset. That being said, there could be ethical dilemmas in which the way data was reported and if data was left out of reporting. It should also be important to consider that this dataset is not to be a case that will predict all shootings that may occur in the future. Another ethical dilemma that may arise with such a dataset is that personal data points such as victims race, sex, and age is used in the dataset but it is not clear whether each victim provided permission to use their data. The deceased are not alive to give permission so it is not clear whether the next of kin was asked before using their data.\n",
+    "\n",
+    "Relational Ethics: In the view of relational ethics, the relationship between the data collectors and the companies in which they receive the data matter greatly. If there is not a good relationship, then data may not be reported, which skews it. \n",
+    "\n",
+    "Ethic of Expediency: The ethic of expediency can apply to both the data collectors and Segura. If either party \"cutrs corners\" and disregards moral implications, based on what they think is the easiest at the time, then this conflicts ethical values that prioritize honesty and trust. This can lead to negative consequences in the long run for the parties involved. \n"
    ]
   }
  ],
